// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalendarContainer> should style correctly by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

<div
  className="c0"
/>
`;

exports[`<CalendarWrapper> should style correctly by default 1`] = `
.c0 {
  margin: 0 24px;
}

<div
  className="c0"
/>
`;

exports[`<Content> should style correctly by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  width: 100%;
  overflow: auto;
}

<div
  className="c0"
/>
`;

exports[`<DateInput> should style correctly by default 1`] = `
.c0 {
  margin-right: 12px;
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`<DateTimeInputContainer> should style correctly by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 16px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`<DateTimeInputs> should style correctly by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
  margin-bottom: 12px;
  border-bottom: 1px solid #D1DBE8;
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
  className="c0"
/>
`;

exports[`<EndTimeError> should style correctly by default 1`] = `
.c0 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 75px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: #E12D2D;
  line-height: 18px;
  font-size: 13px;
}

<div
  className="c0"
/>
`;

exports[`<TimeInput> should style correctly by default 1`] = `
.c0 {
  margin-right: 12px;
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;
